--- a/posternruler /P1.conf
+++ b/posternruler /P1.conf
@@ -10,7 +10,7 @@
 
 # ②复制此文件链接，打开Postern软件--导入代理/规则--粘贴URL --点击“从URL导入”：
 
-# https://oo0.bid/p
+# https://ssvip.group
 
 # ##################
 
@@ -22,9 +22,7 @@
 
 # 其它：
 
-# Telegram群组：https://t.me/okpostern
-
-# Telegram频道：https://t.me/onekeypostern
+# Telegram群组：https://t.me/ssvipgroup
 
 # Postern软件官方地址: http://dwz.cn/okpostern
 
@@ -61,13 +59,6 @@
 
 # 5.如何制作自己的conf规则文件
 # 首先阅读高级教程，复制本文规则地址在电脑浏览器打开，全选复制保存到txt，修改你需要修改的字段，重命名txt文件为 p.conf
-
-# 6.介于有人不会注册，再补一个教程
-# 领一个临时邮箱 https://www.moakt.com/zh
-# 先翻墙--打开https://gfw.press/ 注册
-# 收到邮件，按提示重置密码
-# 用刚才注册的账号登陆https://gfw.press/
-# 记下锦囊秘钥，下载锦囊工具znet.exe备用
 
 # ##################
 # 以下是规则内容
