--- a/posternruler /P1.conf
+++ b/posternruler /P1.conf
@@ -6,7 +6,7 @@
 
 # ①下载安装Postern软件（安卓手机）: 
 
-# https://oo0.bid/p.apk
+# http://www.ssvip.group/?p=484&preview_id=484&preview_nonce=b28e7d95c0&post_format=standard&_thumbnail_id=-1&preview=true
 
 # ②复制此文件链接，打开Postern软件--导入代理/规则--粘贴URL --点击“从URL导入”：
 
@@ -67,8 +67,8 @@
 [General]
 
 [Proxy]
-a = GFW.press,45.32.129.216,10010,GFW.press,cV2DrsavRM
-b = GFW.press,45.32.201.141,10010,GFW.press,cV2DrsavRM
+ssvip.group = GFW.press,45.32.229.110,19975,GFW.press,FX5LPDiGPUg29Nsj
+
 
 [Proxy Group]
 Proxy = select,a,b
