--- a/posternruler /P1.conf
+++ b/posternruler /P1.conf
@@ -67,11 +67,11 @@
 [General]
 
 [Proxy]
-ssvip.group = GFW.press,45.32.229.110,19975,GFW.press,FX5LPDiGPUg29Nsj
+a = GFW.press,45.32.229.110,19975,GFW.press,FX5LPDiGPUg29Nsj
 
 
 [Proxy Group]
-Proxy = select,a,b
+Proxy = select,a
 
 [Host]
 localhost = 127.0.0.1
