--- a/posternruler /P1.conf
+++ b/posternruler /P1.conf
@@ -67,9 +67,9 @@
 [General]
 
 [Proxy]
-a = GFW.press,45.32.229.110,19975,GFW.press,FX5LPDiGPUg29Nsj
-
-
+a = GFW.press,103.76.106.249,19929,GFW.press,uJ5zkem2BuRvjDrr
+b = GFW.press,103.76.106.249,19926,GFW.press,uJ5zkem2BuRvjDr6
+c = GFW.press,103.76.106.249,19925,GFW.press,uJ5zkem2BuRvjDra
 [Proxy Group]
 Proxy = select,a
 
