--- a/posternruler /P1.conf
+++ b/posternruler /P1.conf
@@ -67,9 +67,9 @@
 [General]
 
 [Proxy]
-a = GFW.press,103.76.106.249,19929,GFW.press,uJ5zkem2BuRvjDrr
-b = GFW.press,103.76.106.249,19926,GFW.press,uJ5zkem2BuRvjDr6
-c = GFW.press,103.76.106.249,19925,GFW.press,uJ5zkem2BuRvjDra
+a = GFW.press,138.197.168.143,10001,GFW.press,KgW9jp9CLH
+b = GFW.press,45.55.199.183,10001,GFW.press,9KRJ4NwzNv
+
 [Proxy Group]
 Proxy = select,a
 
