--- a/posternruler /P1.conf
+++ b/posternruler /P1.conf
@@ -67,8 +67,8 @@
 [General]
 
 [Proxy]
-a = GFW.press,138.197.168.143,10001,GFW.press,KgW9jp9CLH
-b = GFW.press,45.55.199.183,10001,GFW.press,9KRJ4NwzNv
+a = GFW.press,188.166.216.85,10001,GFW.press,jPiopy3iwo
+b = GFW.press,188.166.216.85,10010,GFW.press,i7vRyJ3hvN
 
 [Proxy Group]
 Proxy = select,a
