--- a/posternruler /P1.conf
+++ b/posternruler /P1.conf
@@ -67,8 +67,8 @@
 [General]
 
 [Proxy]
-a = GFW.press,188.166.216.85,10001,GFW.press,jPiopy3iwo
-b = GFW.press,188.166.216.85,10010,GFW.press,i7vRyJ3hvN
+a = GFW.press,128.199.157.160,10001,GFW.press,nxpqwi4Fvi
+b = GFW.press,128.199.157.160,10010,GFW.press,oiW7H4nxhF
 
 [Proxy Group]
 Proxy = select,a
